# aipuzzler

./: README.md  pyproject.toml  report.md
src/puzzle_solver/: crew.py  main.py
src/puzzle_solver/config/: agents.yaml  tasks.yaml
