[project]
name = "puzzle_solver"
version = "0.1.0"
description = "puzzle-solver using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
puzzle_solver = "puzzle_solver.main:run"
run_crew = "puzzle_solver.main:run"
train = "puzzle_solver.main:train"
replay = "puzzle_solver.main:replay"
test = "puzzle_solver.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
